[tool.poetry]
name = "pelican-feed-filter"
version = "1.1.0"
description = "Filter elements from feeds according to custom rules"
authors = ["David Alfonso <developer@davidalfonso.es>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin"]
repository = "https://github.com/pelican-plugins/feed-filter"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/feed-filter/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pelican = "^4.5"
markdown = {version = "^3.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^22"
flake8 = "^5.0"
flake8-black = "^0.3"
invoke = "^1.3"
isort = "^5.4"
livereload = "^2.6"
markdown = "^3.2"
pytest = "^7.0"
pytest-cov = "^3.0"
pytest-pythonpath = "^0.7"
pytest-sugar = "^0.9"
Werkzeug = "^1.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Feed Filter"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
append-github-contributor = true

[tool.isort]
# Maintain compatibility with Black
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" and "pandoc_reader" as separate import sections
known_pelican = "pelican"
known_feedfilter = "feed_filter"

sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FEEDFILTER,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
